--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ language: python
 python:
     - "3.5"
 
+virtualenv:
+  system_site_packages: true
+
 before_install:
     - sudo apt-get update -qq
     - sudo apt-get install -y python3-libtorrent python3-coverage
