--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_install:
     - sudo apt-get install -y python3-libtorrent
 
 before_script:
-    - ln -s /usr/lib/python3/dist-packages/*libtorrent* /home/travis/virtualenv/python3*/lib/python3*/site-packages
+    - ln -sf /usr/lib/python3/dist-packages/*libtorrent* /home/travis/virtualenv/python3*/lib/python3*/site-packages
 
 script: nosetests
