--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,6 @@ before_install:
     - sudo add-apt-repository ppa:deluge-team/ppa -y
     - sudo apt-get update -qq
     - sudo apt-get install -y python3-libtorrent
+    - "cd spritzle/spritzle && sudo python setup.py install"
 
 script: nosetests
