--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_install:
     - sudo add-apt-repository ppa:deluge-team/ppa -y
     - sudo apt-get update -qq
     - sudo apt-get install -y python3-libtorrent
-    - sudo python setup.py install
+
+install:
+    - python setup.py install
 
 script: nosetests
