--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
     - sudo apt-get install -y python3-libtorrent
 
 before_script:
-    - ln -sf /usr/lib/python3/dist-packages/*libtorrent* /home/travis/virtualenv/python3*/lib/python3.4.*/site-packages
+    - ln -sf /usr/lib/python3/dist-packages/*libtorrent* /home/travis/virtualenv/python3.4.*/lib/python3*/site-packages
     - ls -l /usr/lib/python3/dist-packages/*libtorrent*
     - ls -l /home/travis/virtualenv/python3.4*/lib/python3*/site-packages
 
