--- a/.circleci/image/Dockerfile
+++ b/.circleci/image/Dockerfile
@@ -1,6 +1,24 @@
-FROM circleci/python
+FROM base/archlinux
 
-RUN sudo apt-get update && sudo apt-get install build-essential checkinstall libboost-system-dev libboost-python-dev libboost-chrono-dev libboost-random-dev libssl-dev
-RUN sudo git clone https://github.com/arvidn/libtorrent.git
-RUN cd libtorrent && sudo ./autotool.sh && sudo ./configure --libdir=/usr/lib --enable-python-binding --disable-static --with-libiconv --with-boost-python=boost_python3 --disable-deprecated-functions && sudo make && sudo make install
-
+RUN pacman -Sy --noconfirm pacman-contrib
+RUN curl -s "https://www.archlinux.org/mirrorlist/?country=US&protocol=https&use_mirror_status=on" | sed -e 's/^#Server/Server/' -e '/^#/d' | rankmirrors -n 5 -
+RUN pacman -Sy --noconfirm git cmake boost base-devel python python-setuptools
+RUN curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python
+RUN git clone https://github.com/arvidn/libtorrent.git
+RUN cd libtorrent && \
+     git checkout RC_1_2 && \
+     git submodule init && \
+     git submodule update && \
+    cd .. && \
+     mkdir build && \
+    cd build && \
+     cmake \
+        -DCMAKE_BUILD_TYPE=Release \
+        -DCMAKE_INSTALL_PREFIX="/usr" \
+        -DCMAKE_INSTALL_LIBDIR="lib" \
+        -Ddeprecated-functions=OFF \
+        -Dpython-bindings=ON \
+        -DPYTHON_EXECUTABLE="/usr/bin/python3" \
+        "../libtorrent" && \
+     make && \
+     make install
